Fix #28: use overflow-x: auto

--- a/src/themes/style.css
+++ b/src/themes/style.css
@@ -174,7 +174,7 @@ a, a:visited, a:hover {
 }
 
 #code {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 td.line-number {
